# CFS_native

./: INSTALL.md  MSGIDS.txt  Makefile
apps/: sbn_dtn  sbn_f_ccsds_end  sbn_f_remap  sbn_f_test  sbn_serial  sbn_spacewire  sbn_tcp  sbn_udp
apps/atsam_test/: CMakeLists.txt  arch_build.cmake  mission_build.cmake
apps/atsam_test/config/: default_atsam_test_fcncodes.h  default_atsam_test_internal_cfg.h  default_atsam_test_msgdefs.h  default_atsam_test_msgids.h  default_atsam_test_msgstruct.h  default_atsam_test_tbldefs.h  default_atsam_test_topicids.h
apps/cf/config/: default_cf_mission_cfg.h  default_cf_msgids.h
apps/ds/unit-test/: ds_app_tests.c
apps/inc/: MISSION_ci_types.h  MISSION_to_types.h
apps/sbn/: CMakeLists.txt
apps/sc/: CMakeLists.txt
apps/sch_lab/: CMakeLists.txt
apps/to_lab/: CMakeLists.txt
cfe/docs/: cFE Application Developers Guide.md
libs/cfs_lib/: CMakeLists.txt
osal/: .gitmodules
osal/src/bsp/external-dependencies/bsp_v71/packs/ATSAMV71Q21B_DFP/: CMakeLists.txt
osal/src/bsp/external-dependencies/bsp_v71/packs/ATSAMV71Q21B_DFP/component/: CMakeLists.txt
osal/src/bsp/external-dependencies/bsp_v71/packs/ATSAMV71Q21B_DFP/instance/: CMakeLists.txt
osal/src/bsp/external-dependencies/bsp_v71/packs/CMSIS/: CMakeLists.txt
osal/src/bsp/external-dependencies/bsp_v71/packs/CMSIS/CMSIS/Core/Include/: cachel1_armv7.h  core_cm7.h
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/: CMakeLists.txt  definitions.h  exceptions.c  freertos_hooks.c  harmony-manifest-success.yml  initialization.c  interrupts.c  interrupts.h
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/bsp/: CMakeLists.txt
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/driver/: CMakeLists.txt
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/osal/: CMakeLists.txt
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/peripheral/: CMakeLists.txt
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/peripheral/clk/: CMakeLists.txt  plib_clk.c
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/peripheral/efc/: CMakeLists.txt  plib_efc.c  plib_efc.h
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/peripheral/mcan/: CMakeLists.txt  plib_mcan1.c  plib_mcan1.h  plib_mcan_common.h
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/peripheral/mpu/: CMakeLists.txt
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/peripheral/nvic/: CMakeLists.txt  plib_nvic.c
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/peripheral/pio/: CMakeLists.txt  plib_pio.c  plib_pio.h
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/peripheral/pwm/: CMakeLists.txt  plib_pwm0.c  plib_pwm1.c
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/peripheral/rstc/: CMakeLists.txt  plib_rstc.c  plib_rstc.h
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/peripheral/rswdt/: CMakeLists.txt  plib_rswdt.c
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/peripheral/spi/: CMakeLists.txt  plib_spi0.c  plib_spi0.h  plib_spi1.c  plib_spi1.h
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/peripheral/spi/spi_master/: CMakeLists.txt  plib_spi0_master.c  plib_spi1_master.c
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/peripheral/tc/: CMakeLists.txt  plib_tc3.c  plib_tc3.h
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/peripheral/twihs/: CMakeLists.txt
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/peripheral/uart/: CMakeLists.txt  plib_uart0.c  plib_uart0.h  plib_uart1.c  plib_uart1.h  plib_uart2.c  plib_uart2.h  plib_uart3.c  plib_uart3.h  plib_uart_common.h
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/peripheral/usart/: CMakeLists.txt  plib_usart0.c  plib_usart0.h  plib_usart1.c  plib_usart1.h  plib_usart2.c  plib_usart2.h  plib_usart_common.h
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/peripheral/wdt/: CMakeLists.txt  plib_wdt.c
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/sam_v71_xult.mhc/: pwm0.yml  pwm1.yml  rstc.yml  settings.yml  spi1.yml  stdio.yml  sys_time.yml  uart0.yml  uart1.yml  uart2.yml  uart3.yml  usart1.yml
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/stdio/: CMakeLists.txt  xc32_monitor.c
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/system/: CMakeLists.txt
osal/src/bsp/external-dependencies/bsp_v71/sam_v71_xult/tst_build/: CMakeCache.txt  CopyOfCMakeCache.txt
osal/src/bsp/generic-freertos/: CMakeLists.txt
osal/src/bsp/generic-freertos/src/: bsp_console.c  bsp_start.c  generic_freertos_bsp_internal.h
osal/src/os/external-dependencies/littlefs/: CMakeLists.txt
osal/src/os/freertos/: CMakeLists.txt
osal/src/os/freertos/inc/: os-freertos.h  os-impl-binsem.h  os-impl-console.h  os-impl-countsem.h  os-impl-mutex.h  os-impl-queues.h  os-impl-tasks.h  os-impl-timebase.h
osal/src/os/freertos/src/: os-impl-binsem.c  os-impl-common.c  os-impl-console.c  os-impl-countsem.c  os-impl-dirs.c  os-impl-errors.c  os-impl-idmap.c  os-impl-loader.c  os-impl-mutex.c  os-impl-no-module.c  os-impl-queues.c  os-impl-tasks.c  os-impl-timebase.c
osal/src/os/freertos/todo/: os-impl-files.c  os-impl-filesys.c  os-impl-heap.c  os-impl-network.c
sample_defs/: arch_build_custom.cmake  cpu1_cfe_es_startup.scr  default_cfe_es_internal_cfg.h  native_osconfig.cmake  sample_perfids.h  targets.cmake
sample_defs/freertos/: arch_build_custom_xc32_samx7x.cmake  find_compiler.cmake  samx7x_cfe_es_startup.scr  toolchain-xc32-freertos.cmake
sample_defs/rtems_atsamv/: arch_build_custom_rtems_arm-rtems6-atsamv.cmake  arm-rtems6-atsamv_cfe_es_startup.scr  arm-rtems6-atsamv_osconfig.cmake  bsp_rtems_cfg.h  toolchain-arm-rtems6-atsamv.cmake
scripts/: build_cfs_native.sh  setup_repository.sh
scripts/freertos/: build_FTFC.sh  clean_mplab.sh  gen_makefiles.sh  setup_cfs_env_freertos.sh
scripts/rtems_atsamv/: rtems_tarballer.sh  setup_cfs_env_rtems.sh
tools/cFS-GroundSystem/: RoutingService.py
tools/cfdp_ground/: .gitignore  LICENSE.txt  README.md  cfdp_attach_cmd_header.py  cfdp_peer_udp.py  cfdp_uplink.py
(+312 files in other folders)
